sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-sample-service
spec:
  selector:
    app: httpd-sample
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
